Move back to swing ui. wip